Added cmake build process to setup.py.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(mead)
 find_package(PythonLibs)
 include_directories(${PYTHON_INCLUDE_DIRS})
 
-add_subdirectory(pybind11)
-add_subdirectory(srt)
-pybind11_add_module(srt mead_srt.cc)
+add_subdirectory(lib/pybind11)
+add_subdirectory(lib/srt)
+pybind11_add_module(srt src/mead_srt.cc)
